--- a/fdmbpm/todo
+++ b/fdmbpm/todo
@@ -2,11 +2,11 @@
 [x]separar algoritmo de thomas
 [ ]separar core de grid
 [x]criar o slab alto nivel que internamete separa em 2d e 3d
+[ ]Controle de slice em x ou y vir do run do slab3d e descer ate os get_row, get_col, get_sx, get_sy, get_qx e get_qy
 [ ]melhorar nomenclatura de funções e variaveis do slab3d
 ----- 0.1 ---------
 [ ]tornar todos os maps do codigo em paralelo
 [ ]otimizar dephts_cartesian_product
-[ ]get_q, get_s, get_col, get_row usaram submatrix para terem uma forma generica
 [ ]criar composição de cores
 [ ]criar composição de beams
 [ ]criar leitor de roteiro de simulação externo
