--- a/fdmbpm/todo
+++ b/fdmbpm/todo
@@ -1,6 +1,7 @@
 [x]limpar run do slab3d
 [x]separar algoritmo de thomas
 [ ]separar core de grid
+[ ]deixar core tipo dinamic em runtime pra poder ler do arquivo de simulação
 [x]criar o slab alto nivel que internamete separa em 2d e 3d
 [ ]Controle de slice em x ou y vir do run do slab3d e descer ate os get_row, get_col, get_sx, get_sy, get_qx e get_qy
 [ ]melhorar nomenclatura de funções e variaveis do slab3d
