--- a/optical_waveguide/todo
+++ b/optical_waveguide/todo
@@ -3,7 +3,7 @@
 [ ]separar core de grid
 [ ]deixar core tipo dinamic em runtime pra poder ler do arquivo de simulação
 [x]criar o slab alto nivel que internamete separa em 2d e 3d
-[ ]Controle de slice em x ou y vir do run do slab3d e descer ate os get_row, get_col, get_sx, get_sy, get_qx e get_qy
+[x]Controle de slice em x ou y vir do run do slab3d e descer ate os get_row, get_col, get_sx, get_sy, get_qx e get_qy
 [ ]melhorar nomenclatura de funções e variaveis do slab3d
 [ ]remover codigo reptido do get_q e get_s do slab::bidimensional
 ----- 0.1 ---------
