--- a/optical_waveguide/todo
+++ b/optical_waveguide/todo
@@ -1,15 +1,14 @@
 [x]limpar run do slab3d
 [x]separar algoritmo de thomas
-[ ]separar core de grid
-[ ]deixar core tipo dinamic em runtime pra poder ler do arquivo de simulação
+[x]separar core de grid
+[x]deixar core tipo dinamic em runtime pra poder ler do arquivo de simulação
 [x]criar o slab alto nivel que internamete separa em 2d e 3d
 [x]Controle de slice em x ou y vir do run do slab3d e descer ate os get_row, get_col, get_sx, get_sy, get_qx e get_qy
 [ ]melhorar nomenclatura de funções e variaveis do slab3d
-[ ]remover codigo reptido do get_q e get_s do slab::bidimensional
+[ ]criar leitor de roteiro de simulação externo
 ----- 0.1 ---------
 [ ]tornar todos os maps do codigo em paralelo
 [ ]otimizar dephts_cartesian_product
 [ ]criar composição de cores
 [ ]criar composição de beams
-[ ]criar leitor de roteiro de simulação externo
 ---- 1.0 -----------
