--- a/optical_waveguide/todo
+++ b/optical_waveguide/todo
@@ -12,3 +12,7 @@
 [ ]criar composição de cores
 [ ]criar composição de beams
 ---- 1.0 -----------
+
+Testes
+
+[ ] feixe gaussiano em regiões fora da grid de simulação
