--- a/optical_waveguide/todo
+++ b/optical_waveguide/todo
@@ -5,7 +5,7 @@
 [x]criar o slab alto nivel que internamete separa em 2d e 3d
 [x]Controle de slice em x ou y vir do run do slab3d e descer ate os get_row, get_col, get_sx, get_sy, get_qx e get_qy
 [x]melhorar nomenclatura de funções e variaveis do slab3d
-[ ]criar leitor de roteiro de simulação externo
+[x]criar leitor de roteiro de simulação externo
 ----- 0.1 ---------
 [ ]tornar todos os maps do codigo em paralelo
 [ ]otimizar dephts_cartesian_product
